--- a/playbook-create-docker.yml
+++ b/playbook-create-docker.yml
@@ -1,4 +1,4 @@
-- hosts: [Invertori.hosts]
+- hosts: [Invertori.hosts] // si es que no funciona el metodo del inventori regresar a la forma de variable 
   tasks:
   
     - name: Create DockerFile
