--- a/playbook-create-docker.yml
+++ b/playbook-create-docker.yml
@@ -2,10 +2,13 @@
   tasks:
   
     - name: Create DockerFile
-      shell:  '''
+      shell:  
+           cmd | 
+                '''
                     cat <<EOT > Dockerfile
                     FROM nginx:latest
                     COPY index.html /usr/share/nginx/html/
+                    
                 '''
     - name: Build Image
       shell:  docker build -t "{{ var_docker_repo }}"/"{{ var_job_name }}":"{{ var_build_number }}" .
