--- a/playbook-create-docker.yml
+++ b/playbook-create-docker.yml
@@ -1,5 +1,12 @@
 - hosts: "{{var_ip}}"
   tasks:
+     - name: Create DockerFile
+      shell: '''
+                    cat <<EOT > Dockerfile
+                    FROM nginx:latest
+                    COPY index.html /usr/share/nginx/html/
+                    
+                ''' 
     - name: Build Image
       shell:  docker build -t "{{ var_docker_repo }}"/"{{ var_job_name }}":"{{ var_build_number }}" .
     - name: Publish Image
