--- a/playbook-DockerFile.yml
+++ b/playbook-DockerFile.yml
@@ -1,5 +1,11 @@
-- hosts: all
+- hosts: "{{var_ip}}"
   tasks:
+    - name: DockerFile
+      shell: '''
+              cat <<EOT > Dockerfile
+               FROM nginx:latest
+               COPY indexV2.html /usr/share/nginx/html/
+               ''' 
     - name: Build Image
       shell: docker build -t "{{ var_docker_repo }}"/"{{ var_job_name }}":"{{ var_build_number }}" .
     - name: Publish Image
