--- a/playbook-DockerFile.yml
+++ b/playbook-DockerFile.yml
@@ -1,18 +1,15 @@
-- hosts: "{{var_ip}}"
+- hosts: all
   tasks:
     - name: DockerFile
-      debugger: on_failed
       shell: '''
               cat <<EOT > Dockerfile
                FROM nginx:latest
                COPY indexV2.html /usr/share/nginx/html/
                ''' 
     - name: Build Image
-      debugger: on_failed
       shell: docker build -t "{{ var_docker_repo }}"/"{{ var_job_name }}":"{{ var_build_number }}" .
     - name: Publish Image
-      debugger: on_failed
       shell: '''
-              docker login -u $docker_user -p $docker_pass
-              docker push ${env.DOCKER_REPO}/${JOB_BASE_NAME}:${BUILD_NUMBER}
+              docker login -u "{{var_docker_user}}" -p $"{{var_docker_user}}"
+              docker push "{{ var_docker_repo }}"/"{{ var_job_name }}":"{{ var_build_number }}"
              '''
